# cletus

./: .gitignore  .gitmodules  DEPENDENCIES.txt  Makefile  README-FIRST.txt  README.md  actuators.c  actuators.h  comms.h  controller.c  controller.h  ftdi_device.c  ftdi_device.h  lisa.c  lisa.h  lisa_messages.h  log.h  messages.proto  misc.c  misc.h  plot_log.py  print_output.c  print_output.h  run_actuators.c  run_all.sh  run_controller.c  run_function_test.c  run_logger.c  run_print_output.c  run_sensors.c  run_uart.c  sensors.c  sensors.h  sim_uart.c  structures.h  uart.c  uart.h  zmq.c  zmq.h
estimator/: Estim.hs  Makefile  estimator.cpp  estmath.cpp  estmath.hpp  structs.hpp  system.cpp  system.hpp
glider/: Aircraft.hs  Glider.hs
hs/: Setup.hs  cletus-sim.cabal  cletus.cabal  getMsgs.py
hs/progs/: DynoPlot.hs  OptViz.hs  Optimize.hs  Plotter.hs  Sim.hs  UsbRc.hs  WtfViz.hs
hs/src/: .gitignore  AeroCoeffs.hs  Aircraft.hs  Channels.hs  Joystick.hs  KiteSim.hs  Main.hs  MsgHelpers.hs  RcReader.hs  Sim.hs  SpatialMathT.hs  UsbRc.hs  ZmqHelpers.hs
hs/src/Model/: AeroCoeffs.hs  Aircraft.hs  Betty.hs
hs/src/Structs/: bindings.dsl.h
imu_communication/I2C/MPU9150_I2C/CPP_reader/: Makefile  Sensor.cpp  Sensor.h  SensorMain.cpp  plot_accel.py  plot_gyro.py  plot_mag.py
imu_communication/UDP/: client.c  server.c
imu_communication/UDP/CPP_udp/: Makefile  Sensor.h  UDP.cpp  UDP.h  UDPClient.cpp  UDPMain.cpp  UDPServer.cpp
js/: js.cabal
lisa_communication/: Makefile  circular_buffer.c  circular_buffer.h  data_decoding.c  data_decoding.h  log.c  log.h  main_lisa_communication.c  test_uart.c  uart_communication.c  uart_communication.h
piksi/: Makefile  README.txt  fifo.c  fifo.h  piksi.c  piksi.h  run_piksi.c
protos_c/: .gitignore
protos_cpp/: .gitignore
sim/: cletus-sim.cabal
sim/src/: AeroCoeffs.hs  Aircraft.hs  Betty.hs  KiteSim.hs  Main.hs  SpatialMathT.hs
sim/src/Structs/: .gitignore  Structures.hs
tests/: log_lisa.c  run_uart_test.sh  test_lisa_message.c  test_uart  test_uart.c
