name:                cletus-sim
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             LGPL-3
license-file:        LICENSE
author:              Greg Horn
maintainer:          gregmainland@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable js
  hs-source-dirs:      src
  main-is:             Joystick.hs
  build-depends:       base >=4.7 && <4.8
                       , usb >= 1.2.0.1 && < 1.3
                       , bytestring
                       , vector
                       , zeromq4-haskell
                       , semigroups
  default-language:    Haskell2010

executable cletus-sim
  main-is:             Main.hs
  other-modules:       Aircraft, AeroCoeffs, Betty, SpatialMathT
  -- other-extensions:    
  build-depends:         base >=4.7 && <4.8
                       , spatial-math
                       , clock
                       , linear >=1.10 && <1.11
                       , cereal
                       , dynobud
                       , bytestring
                       , semigroups
                       , zeromq4-haskell
  hs-source-dirs:      src
  default-language:    Haskell2010


executable wtfviz
  hs-source-dirs:    src
  main-is:           KiteSim.hs
  other-modules:     DrawAC
  build-depends:       base >= 4.5.0 && < 4.8
                     , linear
                     , cereal
                     , dynobud
                     , spatial-math
                     , not-gloss >= 0.5.0
                     , random
                     , zeromq4-haskell
                     , bytestring
--                     , ekg

  ghc-options:       -O2 -threaded -with-rtsopts=-T
  default-language:    Haskell2010

