name:                cletus
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             LGPL-3
license-file:        LICENSE
author:              Greg Horn
maintainer:          gregmainland@gmail.com
-- copyright:           
-- category:            
build-type:          Custom
-- extra-source-files:  
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Channels
                       , SpatialMathT
                       , Model.Aircraft
                       , Model.AeroCoeffs
                       , Model.Betty

  build-depends:       base >=4.7 && <4.8
                       , protocol-buffers
                       , protocol-buffers-descriptor
                       , cereal
                       , dynobud
                       , linear >=1.10
                       , spatial-math
  default-language: Haskell2010

executable rc
  hs-source-dirs:      progs
  main-is:             UsbRc.hs
  build-depends:       base >=4.7 && <4.8
                       , cletus
                       , usb >= 1.2.0.1 && < 1.3
                       , bytestring
                       , vector
                       , zeromq4-haskell
                       , semigroups
                       , protocol-buffers
                       , cmdargs
  default-language:    Haskell2010

executable sim
  hs-source-dirs:      progs
  main-is:             Sim.hs
  other-modules:
  build-depends:         base >=4.7 && <4.8
                       , cletus
                       , bytestring
                       , semigroups
                       , containers
                       , zeromq4-haskell
                       , clock
                       , protocol-buffers
                       , linear >=1.10 && <1.11
  default-language:    Haskell2010


executable wtfviz
  hs-source-dirs:    progs
  main-is:           WtfViz.hs
  other-modules:     DrawAC
  build-depends:       base >= 4.5.0 && < 4.8
                     , cletus
                     , spatial-math
                     , not-gloss >= 0.5.0
                     , random
                     , bytestring
                     , zeromq4-haskell
                     , protocol-buffers
--                     , ekg

  ghc-options:        -O2 -threaded -with-rtsopts=-T
  default-language:    Haskell2010

executable plotter
  hs-source-dirs:    progs
  main-is:           Plotter.hs
  other-modules:
  build-depends:       base >= 4.5.0 && < 4.8
                     , cletus
                     , bytestring
                     , protocol-buffers
                     , zeromq4-haskell
                     , Plot-ho-matic >= 0.4.0.0
--                     , ekg

  ghc-options:        -O2 -threaded -with-rtsopts=-T
  default-language:    Haskell2010
