name:                js
version:             0.1.0.0
synopsis:            DSC joystick interface
-- description:         
license:             LGPL-3
license-file:        LICENSE
author:              Greg Horn
maintainer:          gregmainland@gmail.com
copyright:           2014 Greg Horn
build-type:          Simple
cabal-version:       >=1.10

executable js
  main-is:             Main.hs
  build-depends:       base >=4.7 && <4.8
                       , usb >= 1.2.0.1 && < 1.3
                       , bytestring
                       , vector
                       , zeromq4-haskell
                       , semigroups
  default-language:    Haskell2010
