name:                cletus-sim
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             LGPL-3
license-file:        LICENSE
author:              Greg Horn
maintainer:          gregmainland@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable cletus-sim
  main-is:             Main.hs
  other-modules:       Aircraft, AeroCoeffs, Betty
  -- other-extensions:    
  build-depends:         base >=4.7 && <4.8
                       , dynobud
                       , linear >=1.10 && <1.11
                       , zeromq4-haskell
                       , bytestring
                       , cereal
                       , clock
                       , semigroups
  hs-source-dirs:      src
  default-language:    Haskell2010
